<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/prev_keys_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/etPrev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="按下一个按键"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:text="@string/next_keys_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/etNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="按下另一个按键"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/key_input_hint"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/tvReset"
            android:text="@string/reset_keys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/tvOk"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"/>
    </LinearLayout>
</LinearLayout>
</layout>